--- a/package.json
+++ b/package.json
@@ -4,127 +4,126 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "asynckit": "^0.4.0",
-    "are-we-there-yet": "^1.1.7",
     "aproba": "^1.2.0",
+    "are-we-there-yet": "^1.1.7",
     "async": "^3.2.3",
+    "asynckit": "^0.4.0",
     "base64-js": "^1.5.1",
-    "bson": "^4.6.3",
     "bl": "^4.1.0",
-    "code-point-at": "^1.1.0",
-    "color-convert": "^2.0.1",
+    "bson": "^4.6.3",
     "buffer": "^5.7.1",
-    "color": "^4.2.3",
     "chownr": "^1.1.4",
+    "code-point-at": "^1.1.0",
+    "color": "^4.2.3",
+    "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "color-string": "^1.9.1",
     "combined-stream": "^1.0.8",
-    "core-util-is": "^1.0.3",
     "console-control-strings": "^1.1.0",
+    "core-util-is": "^1.0.3",
     "debug": "^4.3.4",
     "decompress-response": "^6.0.0",
-    "delegates": "^1.0.0",
-    "detect-libc": "^2.0.1",
-    "denque": "^2.0.1",
+    "deep-extend": "^0.6.0",
     "delayed-stream": "^1.0.0",
+    "delegates": "^1.0.0",
+    "denque": "^2.0.1",
+    "detect-libc": "^2.0.1",
     "discord-api-types": "^0.26.1",
+    "discord.js": "^13.8.0",
     "dotenv": "^14.3.2",
     "duplexer": "^0.1.2",
-    "discord.js": "^13.8.0",
     "edit-json-file": "^1.7.0",
-    "event-stream": "^4.0.1",
     "end-of-stream": "^1.4.4",
+    "event-stream": "^4.0.1",
     "expand-template": "^2.0.3",
     "fast-average-color": "^7.1.0",
     "fast-average-color-node": "^2.2.0",
-    "find-value": "^1.0.12",
     "fast-deep-equal": "^3.1.3",
-    "from": "^0.1.7",
+    "find-value": "^1.0.12",
     "form-data": "^4.0.0",
+    "from": "^0.1.7",
     "fs-constants": "^1.0.0",
-    "has-unicode": "^2.0.1",
     "gauge": "^2.7.4",
     "github-from-package": "^0.0.0",
+    "has-unicode": "^2.0.1",
+    "ieee754": "^1.2.1",
     "inherits": "^2.0.4",
     "ini": "^1.3.8",
     "ip": "^1.1.5",
-    "ieee754": "^1.2.1",
     "is-arrayish": "^0.3.2",
     "is-fullwidth-code-point": "^1.0.0",
-    "is-primitive": "^3.0.1",
     "is-plain-object": "^2.0.4",
-    "isobject": "^3.0.1",
-    "lru-cache": "^6.0.0",
-    "iterate-object": "^1.3.4",
+    "is-primitive": "^3.0.1",
     "isarray": "^1.0.0",
-    "lodash.assign": "^4.2.0",
+    "isobject": "^3.0.1",
+    "iterate-object": "^1.3.4",
     "kareem": "^2.3.5",
+    "lodash.assign": "^4.2.0",
+    "lru-cache": "^6.0.0",
+    "map-stream": "^0.0.7",
     "memory-pager": "^1.5.0",
     "mime-db": "^1.51.0",
-    "map-stream": "^0.0.7",
     "mime-types": "^2.1.34",
     "mimic-response": "^3.1.0",
-    "minimist": "^1.2.5",
     "mingo": "^1.3.3",
+    "minimist": "^1.2.5",
     "mkdirp-classic": "^0.5.3",
     "mongodb": "^4.5.0",
     "mongodb-connection-string-url": "^2.5.2",
     "mpath": "^0.9.0",
-    "mongoose": "^6.3.2",
     "mquery": "^4.0.2",
+    "ms": "^2.1.2",
     "napi-build-utils": "^1.0.2",
     "node-abi": "^3.15.0",
     "node-addon-api": "^4.3.0",
-    "ms": "^2.1.2",
     "node-fetch": "^2.6.7",
-    "deep-extend": "^0.6.0",
     "npmlog": "^4.1.2",
-    "pause-stream": "^0.0.11",
     "number-is-nan": "^1.0.1",
     "object-assign": "^4.1.1",
     "once": "^1.4.0",
-    "pump": "^3.0.0",
+    "pause-stream": "^0.0.11",
     "prebuild-install": "^7.1.0",
     "process-nextick-args": "^2.0.1",
+    "pump": "^3.0.0",
     "punycode": "^2.1.1",
-    "readable-stream": "^2.3.7",
-    "rc": "^1.2.8",
     "r-json": "^1.2.10",
+    "rc": "^1.2.8",
+    "readable-stream": "^2.3.7",
     "safe-buffer": "^5.1.2",
-    "save": "^2.5.0",
-    "set-value": "^4.1.0",
     "saslprep": "^1.0.3",
-    "set-blocking": "^2.0.0",
+    "save": "^2.5.0",
     "semver": "^7.3.7",
+    "set-blocking": "^2.0.0",
+    "set-value": "^4.1.0",
     "sharp": "^0.30.4",
     "sift": "^16.0.0",
     "signal-exit": "^3.0.7",
     "simple-concat": "^1.0.1",
     "simple-get": "^4.0.1",
     "simple-swizzle": "^0.2.2",
-    "stream-combiner": "^0.2.2",
     "smart-buffer": "^4.2.0",
-    "string-width": "^1.0.2",
+    "socks": "^2.6.2",
+    "sparse-bitfield": "^3.0.3",
     "split": "^1.0.1",
+    "stream-combiner": "^0.2.2",
     "string_decoder": "^1.1.1",
+    "string-width": "^1.0.2",
     "tar-fs": "^2.1.1",
     "tar-stream": "^2.2.0",
     "through": "^2.3.8",
+    "tr46": "^0.0.3",
     "ts-mixer": "^6.0.1",
     "tslib": "^2.4.0",
-    "tr46": "^0.0.3",
-    "util-deprecate": "^1.0.2",
     "tunnel-agent": "^0.6.0",
+    "util-deprecate": "^1.0.2",
     "w-json": "^1.3.10",
-    "sparse-bitfield": "^3.0.3",
     "webidl-conversions": "^3.0.1",
     "whatwg-url": "^5.0.0",
     "wide-align": "^1.1.5",
-    "ws": "^8.7.0",
     "wrappy": "^1.0.2",
-    "zod": "^3.11.6",
+    "ws": "^8.7.0",
     "yallist": "^4.0.0",
-    "socks": "^2.6.2"
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@discordjs/builders": "^0.12.0",
@@ -135,7 +134,7 @@
     "edit-json-file": "^1.7.0",
     "fast-average-color": "^7.1.0",
     "fast-average-color-node": "^2.1.0",
-    "mongoose": "^6.2.2",
+    "mongoose": "^6.4.0",
     "save": "^2.4.0"
   },
   "scripts": {
