--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "node-abi": "^3.15.0",
     "node-addon-api": "^4.3.0",
     "node-fetch": "^2.6.7",
+    "nodemon": "^2.0.18",
     "npmlog": "^4.1.2",
     "number-is-nan": "^1.0.1",
     "object-assign": "^4.1.1",
