--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "detect-libc": "^2.0.1",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.8.0",
+    "djs-voice": "^1.2.0",
     "dotenv": "^14.3.2",
     "duplexer": "^0.1.2",
     "edit-json-file": "^1.7.0",
