--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "delegates": "^1.0.0",
     "denque": "^2.0.1",
     "detect-libc": "^2.0.1",
-    "discord-api-types": "^0.26.1",
-    "discord.js": "^13.8.0",
     "djs-voice": "^1.2.0",
     "dotenv": "^14.3.2",
     "duplexer": "^0.1.2",
@@ -40,6 +38,7 @@
     "fast-average-color": "^7.1.0",
     "fast-average-color-node": "^2.2.0",
     "fast-deep-equal": "^3.1.3",
+    "filereader": "^0.10.3",
     "find-value": "^1.0.12",
     "form-data": "^4.0.0",
     "from": "^0.1.7",
@@ -128,10 +127,10 @@
     "zod": "^3.11.6"
   },
   "devDependencies": {
-    "@discordjs/builders": "^0.12.0",
+    "@discordjs/builders": "^0.15.0",
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.26.1",
-    "discord.js": "^13.8.0",
+    "discord.js": "^13.8.1",
     "dotenv": "^14.3.2",
     "edit-json-file": "^1.7.0",
     "fast-average-color": "^7.1.0",
