--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assistant_teacher",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bot.js",
   "dependencies": {
     "aproba": "^1.2.0",
     "are-we-there-yet": "^1.1.7",
